Add documentation for Ch 6 and Tidyverse review (#3)
* Add slides for additional session of tidyverse

* Update slides for additional review of the Tidyverse

* Add small section about `furrr` and include link to recording on YouTube

* Update README

* Add missing dependency, datos

* Translate section 1

* Translate sections 2-4

* Add new images and link for the recording of the meeting.

* Update README

* Dev version of discrim.

* Fix discrim_flexible reference.

Also removed a thing that fetched data from the internet with each build (and instead cached locally). Especially since we only use 363 bytes of a several-MB file.

* Update what's saved.

Co-authored-by: Jon Harmon <jonthegeek@gmail.com>

--- a/03-extra-tidyverse-review.Rmd
+++ b/03-extra-tidyverse-review.Rmd
@@ -566,3 +566,8 @@ Es incluso posible agregar una barrita de progreso con el paquete `progressr`
 ### Cohorte 1 {-}
 
 `r knitr::include_url("https://www.youtube.com/embed/UqQ_N6EkTbo")`
+
+<details>
+  <summary> Chat de la reunión </summary>
+
+</details>
