--- a/08-feature_engineering_with_recipes.Rmd
+++ b/08-feature_engineering_with_recipes.Rmd
@@ -32,12 +32,4 @@
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/xTabMY-H_DI")`
